--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <a href="{% url 'profile' %}">
+                    <a class="profile" href="{% url 'profile' %}">
                         <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                     </a>
                     <p class="nav-name">{{ name }}</p>
@@ -54,7 +54,7 @@
                 <a class="active nav-links" href="{% url 'home' %}">Home</a>
                 <a class="nav-links" href="{% url 'about' %}">About</a>
                 <button class="nav-links" type="button">Logout</button>
-                <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
+                <a class="profile" href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
                     <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                 </a>
