--- a/templates/combination.html
+++ b/templates/combination.html
@@ -104,7 +104,7 @@
                     <p class="manjari combo-total">Total Price: ₱ {{ total_price }}.00</p>   
                 </div>
                 <hr>
-                <a class="manjari form-btn" href="{% url 'form' %}">BACK</a>    
+                <a class="manjari form-btn" href="{% url 'form' %}">Go Back</a>    
             </div>
             
             </form>
