--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -41,7 +41,7 @@
                     <p class="nav-name">{{ name }}</p>
                     <a class="active nav-links" href="{% url 'home' %}">Home</a>
                     <a class="nav-links" href="{% url 'about' %}">About</a>
-                    <button class="nav-links" type="button">Logout</button>
+                    <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="d-flex align-items-center" style="gap: 30px;">
                 <a class="active nav-links" href="{% url 'home' %}">Home</a>
                 <a class="nav-links" href="{% url 'about' %}">About</a>
-                <button class="nav-links" type="button">Logout</button>
+                <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
                     <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
