--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="{% static 'profile.css' %}">
     <link rel="stylesheet" href="{% static 'nav.css' %}">
-    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'global.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -41,7 +41,7 @@
                     <p class="nav-name">{{ name }}</p>
                     <a class="active nav-links" href="{% url 'home' %}">Home</a>
                     <a class="nav-links" href="{% url 'about' %}">About</a>
-                    <button class="nav-links" type="button">Logout</button>
+                    <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="d-flex align-items-center" style="gap: 30px;">
                 <a class="active nav-links" href="{% url 'home' %}">Home</a>
                 <a class="nav-links" href="{% url 'about' %}">About</a>
-                <button class="nav-links" type="button">Logout</button>
+                <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
                     <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
@@ -73,38 +73,37 @@
                 </a>
             </div>
             <form class="pro-info">
-                    <label class="pro-label" for="pro-name">Full Name:</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="name" name="pro-name" required>
-                    </div>
-                    <label class="pro-label" for="pro-email">Email:</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="email" name="pro-email" required>
-                    </div>
-                    <label class="pro-label" for="pro-age">Age:</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="age" name="pro-age" required>
-                    </div>
-                    <label class="pro-label" for="pro-height">Height (cm):</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="height" name="pro-height" required>
-                    </div>
-                    <label class="pro-label" for="pro-weight">Weight (kg):</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="weight" name="pro-weight" required>
-                    </div>
-                    <label class="pro-label" for="pro-bmi">BMI:</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="bmi" name="pro-bmi" required>
-                    </div>
-                    <label class="pro-label" for="pro-calorie">Maintaining Calories:</label>
-                    <div class="pro-outline">
-                        <input class="pro-input" type="calorie" name="pro-calorie" required>
-                    </div>
+                <label class="pro-label" for="pro-name">Full Name:</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="text" name="pro-name" value="{{ name }}" required>
+                </div>
+                <label class="pro-label" for="pro-email">Email:</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="email" name="pro-email" value="{{ email }}" required>
+                </div>
+                <label class="pro-label" for="pro-age">Age:</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="number" name="pro-age" value="{{ age }}" required>
+                </div>
+                <label class="pro-label" for="pro-height">Height (cm):</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="number" name="pro-height" value="{{ height }}" required>
+                </div>
+                <label class="pro-label" for="pro-weight">Weight (kg):</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="number" name="pro-weight" value="{{ weight }}" required>
+                </div>
+                <label class="pro-label" for="pro-bmi">BMI:</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="number" step="0.1" name="pro-bmi" value="{{ bmi }}" required>
+                </div>
+                <label class="pro-label" for="pro-calorie">Maintaining Calories:</label>
+                <div class="pro-outline">
+                    <input class="pro-input" type="number" name="pro-calorie" value="{{ calorie }}" required>
+                </div>
             </form>
             <div class="pro-button">
                 <button class="pro-close">CLOSE</button>
-                <button class="pro-update">UPDATE</button>
             </div>
         </div>
     </div>
