--- a/templates/home.html
+++ b/templates/home.html
@@ -91,5 +91,15 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <p>We care for your Health!</p>
+        <p>Copyright 2024 © BagEats All Rights Reserved.</p>
+        <div class="socials">
+            <p>Follow us&nbsp;&nbsp;—</p>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+    </div>
 </body>
 </html>
