--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -54,7 +54,7 @@
                 <a class="active nav-links" href="{% url 'home' %}">Home</a>
                 <a class="nav-links" href="{% url 'about' %}">About</a>
                 <a class="nav-links" href="{% url 'logout' %}">Logout</a>
-                <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
+                <a class="profile" href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
                     <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                 </a>
@@ -99,5 +99,17 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <p>We care for your Health!</p>
+        <p>Copyright 2024 © BagEats All Rights Reserved.</p>
+        <div class="socials">
+            <p>Follow us&nbsp;&nbsp;—</p>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+    </div>
 </body>
 </html>
+moreinfo.txt
+7 KB
