--- a/static/nav.css
+++ b/static/nav.css
@@ -155,6 +155,8 @@
     margin: 30px auto 24px auto;
     color: white;
     font-family: 'Manjari', sans-serif;
+    max-width: 1440px;
+    width: 100%;
 }
 
 .footer p {
